<resources>
    <string name="app_name">Cocktail Pro</string>
    <string name="nav_share_app">Share App</string>
    <string name="nav_rate_app">Rate App</string>
    <string name="nav_about">About</string>
    <string name="nav_settings">Settings</string>

    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="app_description">Cocktail Pro is a free open source app.
        Cocktail pro guides how to make your own cocktails based on steps provided for each cocktails within the app.</string>
    <string name="app_developer">Copyright © 2016 Filippo Engidashet · All Right Reserved ·</string>
</resources>
