<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@mipmap/ic_share"
            android:title="@string/nav_share_app" />

        <item
            android:id="@+id/nav_favourite"
            android:icon="@mipmap/ic_rate"
            android:title="Favourites" />

        <item
            android:id="@+id/nav_create"
            android:icon="@mipmap/ic_rate"
            android:title="Create Cocktail" />

        <item
            android:id="@+id/nav_rate"
            android:icon="@mipmap/ic_rate"
            android:title="@string/nav_rate_app" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_about"
            android:title="@string/nav_about" />

    </group>
</menu>